--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,10 @@ button {
   border-radius: 5px;
   outline: none;
 
+  color: white;
+
+  padding: 0.2em;
+
   &:hover {
     cursor: pointer;
   }
