--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,10 @@
 * {
-  font-family: "source-code-pro";
+  font-family: "roboto-slab";
+  font-weight: 300;
+}
+
+th, strong {
+  font-weight: 400;
 }
 
 nav .item, h1, h2, h3, h4, h5 {
