--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: "roboto-slab";
+  font-family: "roboto";
   font-weight: 300;
 }
 
@@ -10,6 +10,7 @@ th, strong {
 nav .item, h1, h2, h3, h4, h5 {
   font-family: "ocr-a-std";
   color: $primary;
+  font-weight: 800;
 }
 
 h1 {
