--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -10,9 +10,12 @@ th, strong {
 nav .item, h1, h2, h3, h4, h5 {
   font-family: "ocr-a-std";
   color: $primary;
+}
+
+h1, h2, h3, h4, h5 {
   font-weight: 800;
 }
 
-h1 {
+.center {
   text-align: center;
 }
