esc to close modal, mobile modals

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -3,6 +3,18 @@
   font-weight: 300;
 }
 
+.container {
+  font-size: 1.1em;
+}
+
+.challenges {
+  font-size: 0.8em;
+}
+
+.modal {
+  font-size: 1.2em;
+}
+
 th, strong {
   font-weight: 400;
 }
