--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -9,6 +9,10 @@
     bottom: 0.34em;
   }
 
+  label {
+    font-size: 0.8em;
+  }
+
   input {
     display: block;
     margin-bottom: 0.5em !important;
@@ -21,7 +25,7 @@
   }
 
   input[type="text"], input[type="password"], input[type="email"], button {
-    font-size: 1.2em;
+    font-size: 1em;
     margin: 0.2em 0;
   }
 
@@ -39,6 +43,7 @@
     position: relative;
 
     label {
+      font-size: 1em;
       width: 2em;
       height: 2em;
 
@@ -77,6 +82,7 @@ button {
   color: white;
 
   padding: 0.2em 0.5em;
+  padding-bottom: 0.4em;
 
   &:hover {
     cursor: pointer;
