--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -1,5 +1,5 @@
 .form {
-  margin: 0 15vw;
+  margin: 0 10%;
 
   @media screen and (max-width: 768px) {
     margin: 0;
@@ -31,6 +31,10 @@
 
   input[type="checkbox"] {
     visibility: hidden;
+  }
+
+  .checkbox-container {
+    margin: 1em 0 0.5em 0;
   }
 
   .checkbox {
