--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -32,3 +32,11 @@ h1, h2, h3, h4, h5 {
 .center {
   text-align: center;
 }
+
+.error {
+  color: $primary;
+
+  &:before {
+    content: 'Error: ';
+  }
+}
