--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,8 @@ html, body {
   max-width: 50em;
   border-radius: 1em;
   padding: 1em 2em;
-  box-shadow: 0 0 1px 2px rgba(200, 200, 200, 1);
+  background-color: rgba(250, 250, 250, 1);
+  box-shadow: 0.2em 0.2em rgba(200, 200, 200, 0.8);
   margin-bottom: 1.5em;
 
   h2 {
