--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,6 +46,7 @@ html, body {
   background-color: rgba(250, 250, 250, 1);
   box-shadow: 0.2em 0.2em rgba(200, 200, 200, 0.8);
   margin-bottom: 1.5em;
+  overflow-x: auto;
 
   h2 {
     margin-top: 0.2em;
