--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,7 @@ html, body {
   max-width: 50em;
   border-radius: 1em;
   padding: 1em 2em;
-  background-color: rgba(250, 250, 250, 1);
+  background-color: $secondary;
   box-shadow: 0.2em 0.2em rgba(200, 200, 200, 0.8);
   margin-bottom: 1.5em;
   overflow-x: auto;
