--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -95,6 +95,13 @@ button {
     background-color: darken($primary, 5%);
     border: 2px solid darken($primary, 5%);
   }
+
+  &[disabled] {
+    pointer-events: none;
+    cursor: not-allowed;
+    background-color: desaturate($primary, 20%);
+    border-color: desaturate($primary, 20%);
+  }
 }
 
 input {
@@ -106,5 +113,9 @@ input {
   &:focus {
     border: 1px solid $primary;
     box-shadow: inset 0 0 0.1em 0.1em $secondary;
+  }
+
+  &[disabled] {
+    cursor: not-allowed;
   }
 }
