use variables in scss

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -42,7 +42,7 @@
     font-size: 0.7em;
     width: 2em;
     height: 2em;
-    background: #ddd;
+    background: $secondary;
     border-radius: 0.5em;
     position: relative;
 
