--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,16 @@ html, body {
   }
 }
 
+
+a {
+  color: black;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .hidden {
   display: none !important;
 }
